--- a/resources/js/locales/es/pagination.json
+++ b/resources/js/locales/es/pagination.json
@@ -1,6 +1,6 @@
 ﻿{
-  ""pagination"": {
-    ""next"": ""Siguiente"",
-    ""previous"": ""Anterior""
+  "pagination": {
+    "next": "Siguiente",
+    "previous": "Anterior"
   }
-}"
+}
