--- a/resources/js/locales/en/pagination.json
+++ b/resources/js/locales/en/pagination.json
@@ -1,6 +1,6 @@
 ﻿{
-  ""pagination"": {
-    ""next"": ""Next"",
-    ""previous"": ""Previous""
+  "pagination": {
+    "next": "Next",
+    "previous": "Previous"
   }
-}"
+}
