--- a/resources/js/locales/es/dashboard.json
+++ b/resources/js/locales/es/dashboard.json
@@ -12,6 +12,7 @@
     "engagementTrends": "Tendencia de Engagement (Últimos 30 días)",
     "followersByPlatform": "Seguidores por Plataforma",
     "campaignPerformance": "Rendimiento de Campañas",
+    "platformPerformance": "Rendimiento Global por Plataforma",
     "views": "Vistas",
     "clicks": "Clicks",
     "engagement": "Engagement",
