fix: neccesary translations

--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -7,20 +7,66 @@
     "viewAll": "View all",
     "new": "New",
     "saving": "Saving...",
+    "listView": "List View",
+    "gridView": "Grid View",
+    "totalSettings": "Total Settings",
+    "unsavedChanges": "Unsaved Changes",
+    "configured": "Configured",
+    "notConfigured": "Not Configured",
+    "allSaved": "All Saved",
+    "refresh": "Refresh",
     "save": "Save",
     "cancel": "Cancel",
     "continue": "Continue",
     "delete": "Delete",
     "edit": "Edit",
+    "analytics": "Analytics",
+    "aiChat": "AI Chat",
+    "logout": "Logout",
+    "note": "Note",
+    "warning": "Warning",
+    "success": "Success",
+    "error": "Error",
+    "next": "Next",
+    "previous": "Previous",
+    "showing": "Showing",
+    "of": "of",
+    "results": "results",
+    "perPage": "per page",
+    "noResults": "No results found",
+    "search": "Search by name",
+    "preview": "Preview",
+    "settings": "Settings",
+    "done": "Done",
+    "processing": "Processing...",
+    "creating": "Creating...",
+    "save_changes": "Save Changes",
+    "noCreditCard": "No credit card required",
+    "unknown": "Unknown",
+    "platform": "Platform",
     "close": "Close",
+    "created": "Created",
+    "creator": "Creator",
+    "lastUpdated": "Last Updated",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "viewOnPlatform": "View on platform",
+    "viewDirectly": "View full screen",
+    "editInPanel": "Edit in panel",
     "yes": "Yes",
     "no": "No",
+    "configure": "Configure",
+    "noSettings": "No default settings",
+    "adjustOptions": "Adjust specific options",
+    "remove": "Remove",
     "item": "Item",
     "publications": "Publications",
     "vistas": "Views",
     "clics": "Clicks",
     "engagement": "Engagement",
-    "viewAllPerformance": "View all performance",
+    "filters": {
+      "all": "All"
+    },
     "status": {
       "active": "Active",
       "inactive": "Inactive",
@@ -28,11 +74,9 @@
       "paused": "Paused",
       "draft": "Draft"
     },
-    "filters": {
-      "all": "All"
-    },
     "errors": {
-      "checkFormErrors": "Please check the form for errors"
-    }
+      "checkFormErrors": "Please check the errors in the form"
+    },
+    "vsLastPeriod": "vs last period"
   }
 }
