--- a/resources/js/locales/es/common.json
+++ b/resources/js/locales/es/common.json
@@ -76,6 +76,7 @@
     },
     "errors": {
       "checkFormErrors": "Por favor, revisa los errores en el formulario"
-    }
+    },
+    "vsLastPeriod": "vs periodo anterior"
   }
 }
