fix: translations to analytics and workspace

--- a/resources/js/locales/en/analytics.json
+++ b/resources/js/locales/en/analytics.json
@@ -6,6 +6,12 @@
     "vistas": "Views",
     "clics": "Clicks",
     "engagement": "Engagement",
+    "trends": {
+      "likes": "Likes",
+      "comments": "Comments",
+      "shares": "Shares",
+      "saves": "Saves"
+    },
     "stats": {
       "totalViews": "Total Views",
       "totalClicks": "Total Clicks",
