delete (Últimos 30 días) to engagementTrends in translations

--- a/resources/js/locales/en/dashboard.json
+++ b/resources/js/locales/en/dashboard.json
@@ -9,7 +9,7 @@
     "totalReach": "Total Reach",
     "totalEngagement": "Total Engagement",
     "avgEngagementRate": "Average Engagement Rate",
-    "engagementTrends": "Engagement Trends (Last 30 Days)",
+    "engagementTrends": "Engagement Trends",
     "followersByPlatform": "Followers by Platform",
     "campaignPerformance": "Campaign Performance",
     "views": "Views",
