delete (Últimos 30 días) to dasboard.json translations

--- a/resources/js/locales/es/dashboard.json
+++ b/resources/js/locales/es/dashboard.json
@@ -9,7 +9,7 @@
     "totalReach": "Alcance Total",
     "totalEngagement": "Engagement Total",
     "avgEngagementRate": "Tasa de Engagement Promedio",
-    "engagementTrends": "Tendencia de Engagement (Últimos 30 días)",
+    "engagementTrends": "Tendencia de Engagement",
     "followersByPlatform": "Seguidores por Plataforma",
     "campaignPerformance": "Rendimiento de Campañas",
     "platformPerformance": "Rendimiento Global por Plataforma",
