fix: workspace settings

--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -45,6 +45,7 @@
     "unknown": "Unknown",
     "platform": "Platform",
     "close": "Close",
+    "copy": "Copy",
     "created": "Created",
     "creator": "Creator",
     "lastUpdated": "Last Updated",
@@ -59,6 +60,13 @@
     "noSettings": "No default settings",
     "adjustOptions": "Adjust specific options",
     "remove": "Remove",
+    "generate": "Generate",
+    "connect": "Connect",
+    "connected": "Connected",
+    "sent": "Sent",
+    "failed": "Failed",
+    "show_advanced": "Show Advanced",
+    "hide_advanced": "Hide Advanced",
     "item": "Item",
     "publications": "Publications",
     "vistas": "Views",
