--- a/resources/js/locales/es/common.json
+++ b/resources/js/locales/es/common.json
@@ -45,6 +45,7 @@
     "unknown": "Desconocido",
     "platform": "Plataforma",
     "close": "Cerrar",
+    "copy": "Copiar",
     "created": "Creado",
     "creator": "Creador",
     "lastUpdated": "Última Actualización",
@@ -59,6 +60,13 @@
     "noSettings": "Sin ajustes por defecto",
     "adjustOptions": "Ajustar opciones específicas",
     "remove": "Eliminar",
+    "generate": "Generar",
+    "connect": "Conectar",
+    "connected": "Conectado",
+    "sent": "Enviado",
+    "failed": "Fallido",
+    "show_advanced": "Mostrar Avanzado",
+    "hide_advanced": "Ocultar Avanzado",
     "item": "Elemento",
     "publications": "Publicaciones",
     "vistas": "Vistas",
