--- a/resources/js/locales/es/publications.json
+++ b/resources/js/locales/es/publications.json
@@ -3,8 +3,49 @@
     "title": "Publicaciones",
     "subtitle": "Gestionar tus publicaciones",
     "modal": {
-      "view": {
-        "title": "Vista Detallada"
+      "show": {
+        "title": "Vista Detallada",
+        "subtitle": "Ver la publicación",
+        "goal": "Objetivo",
+        "status": "Estado",
+        "campaigns": "Campañas",
+        "budget": "Presupuesto",
+        "startDate": "Fecha de Inicio",
+        "endDate": "Fecha de Fin",
+        "publishDate": "Fecha de Publicación",
+        "publishedOn": "Publicado el",
+        "publications": "Publicaciones",
+        "associatedPublications": "Publicaciones Asociadas",
+        "accountMissingTitle": "Cuenta Desconectada",
+        "accountMissingText": "Esta publicación se publicó en una cuenta ({{account}}) que ya no está conectada. Al editarla se creará una nueva versión para tu cuenta actual. ¿Continuar?",
+        "created": "Creado",
+        "lastUpdated": "Última Actualización",
+        "selectSocialAccounts": "Seleccionar Cuentas",
+        "lockedBySession": "Bloqueado por Sesión",
+        "dragDrop": {
+          "title": "Arrastra y suelta para ordenar",
+          "subtitle": "Sube tus archivos multimedia aquí"
+        },
+        "placeholders": {
+          "title": "Título",
+          "description": "Descripción",
+          "hashtags": "Hashtags",
+          "schedulePublication": "Programar Publicación",
+          "goal": "Objetivo",
+          "startDate": "12/12/2025",
+          "endDate": "12/12/2026"
+        },
+        "button": {
+          "save": "Actualizar",
+          "cancel": "Cancelar"
+        },
+        "contentLocked": "Contenido Bloqueado",
+        "contentLockedHint": "Para editar el contenido (título, descripción o archivos), debes despublicar la publicación de todas las plataformas.",
+        "lockedByOther": "Publicación bloqueada por otro usuario",
+        "locking": {
+          "sessionMessage": "Tienes esta publicación abierta en <1>{{browser}}</1>. Cierra la otra sesión para editar aquí.",
+          "userMessage": "{{user}} está editando esta publicación <1>desde {{browser}}</1>. Tus cambios no podrán ser guardados para evitar conflictos."
+        }
       },
       "schedule": {
         "title": "Fecha para todas las redes",
