--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -1,5 +1,7 @@
 {
   "common": {
+    "deleteConfirmTitle": "Confirm deletion",
+    "deleteConfirm": "Are you sure you want to delete this item? This action cannot be undone.",
     "welcome": "Welcome",
     "loading": "Loading...",
     "select": "Select",
