adjust modal to delete member from workspace

--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -6,6 +6,7 @@
     "loading": "Loading...",
     "select": "Select",
     "more": "More",
+    "confirm": "Confirm",
     "viewAll": "View all",
     "new": "New",
     "saving": "Saving...",
