--- a/resources/js/locales/es/common.json
+++ b/resources/js/locales/es/common.json
@@ -6,6 +6,7 @@
     "loading": "Cargando...",
     "select": "Seleccionar",
     "more": "Más",
+    "confirm": "Confirmar",
     "viewAll": "Ver todo",
     "new": "Nuevo",
     "saving": "Guardando...",
