add  general translations

--- a/resources/js/locales/es/common.json
+++ b/resources/js/locales/es/common.json
@@ -12,6 +12,7 @@
     "saving": "Guardando...",
     "listView": "Vista de Lista",
     "gridView": "Vista de Grilla",
+    "none": "Ninguna",
     "totalSettings": "Total de Ajustes",
     "unsavedChanges": "Cambios no guardados",
     "configured": "Configurado",
