--- a/resources/js/locales/es/manageContent.json
+++ b/resources/js/locales/es/manageContent.json
@@ -35,7 +35,7 @@
       "connected": "Conectado",
       "notConnected": "No Conectada",
       "connectToShare": "Conecta para comenzar a compartir",
-      "connectedBy": "Conectada por",
+      "connectedBy": "Conectado por",
       "benefits": {
         "autoPublish": "Publicar contenido automáticamente",
         "manageAll": "Gestionar todas las cuentas en un solo lugar",
