--- a/resources/js/locales/es/publications.json
+++ b/resources/js/locales/es/publications.json
@@ -281,6 +281,7 @@
       "actions": "Acciones",
       "noCampaign": "Sin Campaña",
       "noPlatforms": "Sin Plataformas",
+      "noMedia": "Sin multimedia",
       "loading": "Cargando...",
       "linkedAccount": "Cuentas Asociadas",
       "emptyState": {
