add option activity and approval history in publication

--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -29,6 +29,8 @@
     "note": "Note",
     "warning": "Warning",
     "success": "Success",
+    "collapse": "Collapse",
+    "expand": "Expand",
     "error": "Error",
     "next": "Next",
     "previous": "Previous",
